<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".EventCreateActivity" >


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/add_event_description"
        android:src="@drawable/ic_alert_blue" />

    <TextView
        android:id="@+id/eventname_pref_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="190dp"
        android:text="@string/eventname_string"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eventname_pref_edittext"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="220dp"
        android:autofillHints="@string/enter_eventname_hint"
        android:hint="@string/enter_eventname_hint"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eventdescription_pref_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="260dp"
        android:text="@string/eventdescription_string"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eventdescriptio_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="290dp"
        android:autofillHints="@string/enter_eventdescription_hint"
        android:ems="20"
        android:hint="@string/enter_eventdescription_hint"
        android:inputType="text"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eventtime_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="350dp"
        android:text="@string/eventtime_string"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/eventtime_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="380dp"
        android:ems="20"
        android:inputType="date"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/eventimage_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="430dp"
        android:text="@string/eventimage_string"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/eventimage_path_textview"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="460dp"
        android:autofillHints="@string/eventimage_hint"
        android:ems="20"
        android:hint="@string/eventimage_hint"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary"
        android:textSize="20sp" />

    <Button
        android:id="@+id/file_choose_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="290dp"
        android:layout_marginTop="462dp"
        android:background="@color/colorOrange"
        android:drawableStart="@drawable/ic_folder_blue" />

    <Button
        android:id="@+id/create_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="510dp"
        android:background="@color/colorBlue"
        android:drawableStart="@drawable/ic_add_blue"
        android:text="@string/add_alert_string" />

</RelativeLayout>
