<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".EventListActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="casual"
        android:text="@string/event_list_title"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="40sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/event_calendar_button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorOrange"
        android:drawableStart="@drawable/ic_date_white"
        android:text="@string/event_calendar_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/add_event_button"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="200dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorGreen"
        android:drawableStart="@drawable/ic_add_white"
        android:text="@string/add_event_button"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/event_list_recylerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="5dp" />


</RelativeLayout>
